--- a/css/common.css
+++ b/css/common.css
@@ -135,7 +135,7 @@ p {
 }
 .navigation ul li{
     float:left;
-    margin:0 30px;
+    margin:0 20px;
 }
 .navigation ul li a{
     text-decoration: none;
